test/jstypes/snapshots/v8_traceback__format_exception_for_v8__represents_exception_with_context_py__0.exc.txt
Traceback (most recent call last):
  File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 38, in raise_context
    self.failing_operation()
  File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 78, in failing_operation
    raise ValueError("Unable to do the thing")
ValueError: Unable to do the thing

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 94, in call_and_capture_tbe
    fn()
  File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 40, in raise_context
    e / 0  # type: ignore[operator]
    ~~^~~
TypeError: unsupported operand type(s) for /: 'ValueError' and 'int'
